2006-05-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/scanpci/pci.ids:
	Update to 2006-05-19 snapshot
	
	* hw/xfree86/scanpci/extrapci.ids:
	Remove entries now present in pci.ids

	* hw/xfree86/scanpci/xf86PciStdIds.h:
	Regenerate from updated pci.ids & extrapci.ids
	
2006-05-19  Adam Jackson  <ajax@freedesktop.org>

	* include/os.h:
	Remove dead DPMS timer functions from the installed headers. 
	(Fredrik Höglund)

2006-05-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Priv.h:
	* hw/xfree86/common/xf86pciBus.c:
	* hw/xfree86/dummylib/Makefile.am:
	* hw/xfree86/dummylib/getemptypci.c:
	* hw/xfree86/os-support/bus/Pci.c:
	* hw/xfree86/os-support/bus/xf86Pci.h:
	* hw/xfree86/os-support/linux/lnx_pci.c:
	Bug #4139: Fix a BAR remapping bug that could lead to IERR and 
	system hang. (Egbert Eich)

2006-05-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/linux/lnx_pci.c:
	Bug #6377: Ignore disabled BARs, and allow matching BARs 
	aligned to less than 16 bytes. (Felix Kühling, ATI)

2006-05-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/linux/lnx_acpi.c:
	Bug #5877: Avoid burning CPU when acpid dies. Require acpid to 
	be running for ACPI support on Linux. Minor errno handling 
	fixes. (Valery Inozemtsev, Adam Jackson)

2006-05-18  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbcompose.c:
	Bug #6827: Fix texel fetch in fbFetchTransformed to avoid 
	crashes. Still not 100% correct, but better than 7.0. (Radek 
	Doulik, Matthias Hopf)

2006-05-17  Daniel Stone  <daniel@freedesktop.org>

	* hw/xfree86/dixmods/Makefile.am:
	Make DBE support conditional.  (Enrico Wiegelt)

	* hw/xfree86/loader/xf86sym.c:
	Make Xv symbols conditional.  (Enrico Wiegelt)

2006-05-15  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/os-support/linux/lnx_acpi.c:
	Bug #5209: Fix APM/ACPI support, again. (Michel Dänzer, Valery 
	Inozemtsev)

2006-05-14  Matthieu Herrb <matthieu.herrb@laas.fr>
