@@ -49,16 +49,27 @@ SOFTWARE.
 
 #ifndef PIXMAPSTRUCT_H
 #define PIXMAPSTRUCT_H
+#include <X11/Xarch.h>
 #include "pixmap.h"
 #include "screenint.h"
 #include "regionstr.h"
+
+/*
+ * The padN members are unfortunate ABI BC.  See fdo bug #6924.
+ */
 
 typedef struct _Drawable {
     unsigned char	type;	/* DRAWABLE_<type> */
     unsigned char	class;	/* specific to type */
     unsigned char	depth;
     unsigned char	bitsPerPixel;
+#if defined(_XSERVER64)
+    XID			pad0;
+#endif
     XID			id;	/* resource id */
+#if defined(_XSERVER64)
+    XID			pad1;
+#endif
     short		x;	/* window: screen absolute, pixmap: 0 */
     short		y;	/* window: screen absolute, pixmap: 0 */
     unsigned short	width;
